@@ -5,7 +5,7 @@
  */
 package io.debezium.connector.jdbc.integration.postgres;
 
-import static org.fest.assertions.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.nio.ByteBuffer;
 import java.util.Arrays;
@@ -21,12 +21,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
-import io.debezium.bindings.kafka.KafkaDebeziumSinkRecord;
+import io.debezium.connector.jdbc.JdbcKafkaSinkRecord;
 import io.debezium.connector.jdbc.JdbcSinkConnectorConfig;
 import io.debezium.connector.jdbc.integration.AbstractJdbcSinkTest;
+import io.debezium.connector.jdbc.junit.jupiter.PostgresInsertModeArgumentsProvider;
+import io.debezium.connector.jdbc.junit.jupiter.PostgresInsertModeArgumentsProvider.PostgresInsertMode;
 import io.debezium.connector.jdbc.junit.jupiter.PostgresSinkDatabaseContextProvider;
 import io.debezium.connector.jdbc.junit.jupiter.Sink;
-import io.debezium.connector.jdbc.junit.jupiter.SinkRecordFactoryArgumentsProvider;
 import io.debezium.connector.jdbc.util.SinkRecordFactory;
 import io.debezium.data.Uuid;
 import io.debezium.doc.FixFor;
@@ -47,27 +48,27 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-6589")
-    public void testShouldCoerceStringTypeToUuidColumnType(SinkRecordFactory factory) throws Exception {
-        shouldCoerceStringTypeToColumnType(factory, "uuid", "9bc6a215-84b5-4865-a058-9156427c887a", "f54c2926-076a-4db0-846f-14cad99a8307");
+    public void testShouldCoerceStringTypeToUuidColumnType(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
+        shouldCoerceStringTypeToColumnType(factory, insertMode, "uuid", "9bc6a215-84b5-4865-a058-9156427c887a", "f54c2926-076a-4db0-846f-14cad99a8307");
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-6589")
-    public void testShouldCoerceStringTypeToJsonColumnType(SinkRecordFactory factory) throws Exception {
-        shouldCoerceStringTypeToColumnType(factory, "json", "{\"id\": 12345}", "{\"id\": 67890}");
+    public void testShouldCoerceStringTypeToJsonColumnType(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
+        shouldCoerceStringTypeToColumnType(factory, insertMode, "json", "{\"id\": 12345}", "{\"id\": 67890}");
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-6589")
-    public void testShouldCoerceStringTypeToJsonbColumnType(SinkRecordFactory factory) throws Exception {
-        shouldCoerceStringTypeToColumnType(factory, "jsonb", "{\"id\": 12345}", "{\"id\": 67890}");
+    public void testShouldCoerceStringTypeToJsonbColumnType(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
+        shouldCoerceStringTypeToColumnType(factory, insertMode, "jsonb", "{\"id\": 12345}", "{\"id\": 67890}");
     }
 
-    private void shouldCoerceStringTypeToColumnType(SinkRecordFactory factory, String columnType, String insertValue,
+    private void shouldCoerceStringTypeToColumnType(SinkRecordFactory factory, PostgresInsertMode insertMode, String columnType, String insertValue,
                                                     String updateValue)
             throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
@@ -75,18 +76,21 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
         properties.put(JdbcSinkConnectorConfig.DELETE_ENABLED, "false");
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server1", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 Schema.OPTIONAL_STRING_SCHEMA,
-                insertValue);
+                insertValue,
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data %s null, primary key(id))";
@@ -94,12 +98,13 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
 
         consume(createRecord);
 
-        final KafkaDebeziumSinkRecord updateRecord = factory.updateRecordWithSchemaValue(
+        final JdbcKafkaSinkRecord updateRecord = factory.updateRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 Schema.OPTIONAL_STRING_SCHEMA,
-                updateValue);
+                updateValue,
+                config);
 
         consume(updateRecord);
 
@@ -107,13 +112,14 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-6967")
-    public void testShouldCoerceNioByteBufferTypeToByteArrayColumnType(SinkRecordFactory factory) throws Exception {
+    public void testShouldCoerceNioByteBufferTypeToByteArrayColumnType(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
@@ -125,12 +131,14 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
         buffer.put((byte) 2);
         buffer.put((byte) 3);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 Schema.OPTIONAL_BYTES_SCHEMA,
-                buffer);
+                buffer,
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data bytea, primary key(id))";
@@ -146,25 +154,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithTextArrayWithASingleValue(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithTextArrayWithASingleValue(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                Arrays.asList("a"));
+                Arrays.asList("a"),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data text[], primary key(id))";
@@ -180,25 +191,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithTextArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithTextArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                Arrays.asList("a", "b", "c"));
+                Arrays.asList("a", "b", "c"),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data text[], primary key(id))";
@@ -214,25 +228,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithTextArrayWithNullValues(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithTextArrayWithNullValues(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                Arrays.asList("a", null, "c", null));
+                Arrays.asList("a", null, "c", null),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (data text[], id int not null, primary key(id))";
@@ -248,25 +265,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithNullTextArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithNullTextArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                null);
+                null,
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (data text[], id int not null, primary key(id))";
@@ -283,25 +303,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithEmptyArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithEmptyArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                Arrays.asList());
+                List.of(),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data text[], primary key(id))";
@@ -317,25 +340,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithCharacterVaryingArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithCharacterVaryingArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(),
-                Arrays.asList("a", "b", "c"));
+                Arrays.asList("a", "b", "c"),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data character varying[], primary key(id))";
@@ -351,25 +377,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithIntArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithIntArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_INT32_SCHEMA).optional().build(),
-                Arrays.asList(1, 2, 42));
+                Arrays.asList(1, 2, 42),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data int[], primary key(id))";
@@ -385,25 +414,28 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7752")
-    public void testShouldWorkWithBoolArray(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithBoolArray(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
         final String tableName = randomTableName();
         final String topicName = topicName("server2", "schema", tableName);
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 "data",
                 SchemaBuilder.array(Schema.OPTIONAL_BOOLEAN_SCHEMA).optional().build(),
-                Arrays.asList(false, true));
+                Arrays.asList(false, true),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, data bool[], primary key(id))";
@@ -419,13 +451,14 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
     }
 
     @ParameterizedTest
-    @ArgumentsSource(SinkRecordFactoryArgumentsProvider.class)
+    @ArgumentsSource(PostgresInsertModeArgumentsProvider.class)
     @FixFor("DBZ-7938")
-    public void testShouldWorkWithMultipleArraysWithDifferentTypes(SinkRecordFactory factory) throws Exception {
+    public void testShouldWorkWithMultipleArraysWithDifferentTypes(SinkRecordFactory factory, PostgresInsertMode insertMode) throws Exception {
         final Map<String, String> properties = getDefaultSinkConfig();
         properties.put(JdbcSinkConnectorConfig.SCHEMA_EVOLUTION, JdbcSinkConnectorConfig.SchemaEvolutionMode.NONE.getValue());
         properties.put(JdbcSinkConnectorConfig.PRIMARY_KEY_MODE, JdbcSinkConnectorConfig.PrimaryKeyMode.RECORD_KEY.getValue());
         properties.put(JdbcSinkConnectorConfig.INSERT_MODE, JdbcSinkConnectorConfig.InsertMode.UPSERT.getValue());
+        properties.put(JdbcSinkConnectorConfig.POSTGRES_UNNEST_INSERT, String.valueOf(insertMode.isUnnestEnabled()));
         startSinkConnector(properties);
         assertSinkConnectorIsRunning();
 
@@ -433,12 +466,14 @@ public class JdbcSinkColumnTypeMappingIT extends AbstractJdbcSinkTest {
         final String topicName = topicName("server2", "schema", tableName);
         final List<UUID> uuids = List.of(UUID.randomUUID(), UUID.randomUUID());
 
-        final KafkaDebeziumSinkRecord createRecord = factory.createRecordWithSchemaValue(
+        JdbcSinkConnectorConfig config = new JdbcSinkConnectorConfig(properties);
+        final JdbcKafkaSinkRecord createRecord = factory.createRecordWithSchemaValue(
                 topicName,
                 (byte) 1,
                 List.of("text_data", "uuid_data"),
                 List.of(SchemaBuilder.array(Schema.OPTIONAL_STRING_SCHEMA).optional().build(), SchemaBuilder.array(Uuid.schema()).optional().build()),
-                Arrays.asList(List.of("a", "b"), uuids.stream().map(UUID::toString).collect(Collectors.toList())));
+                Arrays.asList(List.of("a", "b"), uuids.stream().map(UUID::toString).collect(Collectors.toList())),
+                config);
 
         final String destinationTable = destinationTableName(createRecord);
         final String sql = "CREATE TABLE %s (id int not null, text_data text[], uuid_data uuid[], primary key(id))";
