@@ -29,6 +29,7 @@ import io.debezium.connector.oracle.AbstractOracleStreamingChangeEventSourceMetr
 import io.debezium.connector.oracle.OracleConnectorConfig;
 import io.debezium.connector.oracle.Scn;
 import io.debezium.connector.oracle.logminer.events.EventType;
+import io.debezium.pipeline.metrics.CapturedTablesSupplier;
 import io.debezium.pipeline.source.spi.EventMetadataProvider;
 import io.debezium.util.LRUCacheMap;
 import io.debezium.util.Strings;
@@ -45,7 +46,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LogMinerStreamingChangeEventSourceMetrics.class);
 
-    private static final long MILLIS_PER_SECOND = 1000L;
     private static final int TRANSACTION_ID_SET_SIZE = 10;
 
     private final OracleConnectorConfig connectorConfig;
@@ -57,19 +57,19 @@ public class LogMinerStreamingChangeEventSourceMetrics
     private final AtomicReference<Scn> offsetScn = new AtomicReference<>(Scn.NULL);
     private final AtomicReference<Scn> commitScn = new AtomicReference<>(Scn.NULL);
     private final AtomicReference<Scn> oldestScn = new AtomicReference<>(Scn.NULL);
+    private final AtomicReference<ScnRange> miningSessionScnRange = new AtomicReference<>(ScnRange.empty());
+    private final AtomicReference<ScnRange> miningFetchScnRange = new AtomicReference<>(ScnRange.empty());
     private final AtomicReference<Instant> oldestScnTime = new AtomicReference<>();
     private final AtomicReference<String[]> currentLogFileNames = new AtomicReference<>(new String[0]);
     private final AtomicReference<String[]> minedLogFileNames = new AtomicReference<>(new String[0]);
     private final AtomicReference<String[]> redoLogStatuses = new AtomicReference<>(new String[0]);
     private final AtomicReference<ZoneOffset> databaseZoneOffset = new AtomicReference<>(ZoneOffset.UTC);
 
-    private final AtomicInteger batchSize = new AtomicInteger();
     private final AtomicInteger logSwitchCount = new AtomicInteger();
     private final AtomicInteger logMinerQueryCount = new AtomicInteger();
+    private final AtomicInteger jdbcRows = new AtomicInteger();
 
-    private final AtomicLong sleepTime = new AtomicLong();
-    private final AtomicLong minimumLogsMined = new AtomicLong();
-    private final AtomicLong maximumLogsMined = new AtomicLong();
+    private final LongHistogramMetric minedLogsCount = new LongHistogramMetric();
     private final AtomicLong maxBatchProcessingThroughput = new AtomicLong();
     private final AtomicLong timeDifference = new AtomicLong();
     private final AtomicLong processedRowsCount = new AtomicLong();
@@ -79,6 +79,8 @@ public class LogMinerStreamingChangeEventSourceMetrics
     private final AtomicLong changesCount = new AtomicLong();
     private final AtomicLong scnFreezeCount = new AtomicLong();
     private final AtomicLong partialRollbackCount = new AtomicLong();
+    private final AtomicLong numberOfBufferedEvents = new AtomicLong();
+    private final AtomicLong numberOfCommittedEvents = new AtomicLong();
 
     private final DurationHistogramMetric batchProcessingDuration = new DurationHistogramMetric();
     private final DurationHistogramMetric fetchQueryDuration = new DurationHistogramMetric();
@@ -88,8 +90,8 @@ public class LogMinerStreamingChangeEventSourceMetrics
     private final DurationHistogramMetric parseTimeDuration = new DurationHistogramMetric();
     private final DurationHistogramMetric resultSetNextDuration = new DurationHistogramMetric();
 
-    private final MaxLongValueMetric userGlobalAreaMemory = new MaxLongValueMetric();
-    private final MaxLongValueMetric processGlobalAreaMemory = new MaxLongValueMetric();
+    private final LongHistogramMetric userGlobalAreaMemory = new LongHistogramMetric();
+    private final LongHistogramMetric processGlobalAreaMemory = new LongHistogramMetric();
 
     private final LRUSet<String> abandonedTransactionIds = new LRUSet<>(TRANSACTION_ID_SET_SIZE);
     private final LRUSet<String> rolledBackTransactionIds = new LRUSet<>(TRANSACTION_ID_SET_SIZE);
@@ -97,19 +99,19 @@ public class LogMinerStreamingChangeEventSourceMetrics
     public LogMinerStreamingChangeEventSourceMetrics(CdcSourceTaskContext taskContext,
                                                      ChangeEventQueueMetrics changeEventQueueMetrics,
                                                      EventMetadataProvider metadataProvider,
-                                                     OracleConnectorConfig connectorConfig) {
-        this(taskContext, changeEventQueueMetrics, metadataProvider, connectorConfig, Clock.systemUTC());
+                                                     OracleConnectorConfig connectorConfig,
+                                                     CapturedTablesSupplier capturedTablesSupplier) {
+        this(taskContext, changeEventQueueMetrics, metadataProvider, connectorConfig, Clock.systemUTC(), capturedTablesSupplier);
     }
 
     public LogMinerStreamingChangeEventSourceMetrics(CdcSourceTaskContext taskContext,
                                                      ChangeEventQueueMetrics changeEventQueueMetrics,
                                                      EventMetadataProvider metadataProvider,
                                                      OracleConnectorConfig connectorConfig,
-                                                     Clock clock) {
-        super(taskContext, changeEventQueueMetrics, metadataProvider);
+                                                     Clock clock,
+                                                     CapturedTablesSupplier capturedTablesSupplier) {
+        super(taskContext, changeEventQueueMetrics, metadataProvider, capturedTablesSupplier);
         this.connectorConfig = connectorConfig;
-        this.batchSize.set(connectorConfig.getLogMiningBatchSizeDefault());
-        this.sleepTime.set(connectorConfig.getLogMiningSleepTimeDefault().toMillis());
         this.clock = clock;
         this.startTime = clock.instant();
         this.batchMetrics = new BatchMetrics(this);
@@ -120,6 +122,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
     public void reset() {
         super.reset();
 
+        jdbcRows.set(0);
         changesCount.set(0);
         processedRowsCount.set(0);
         logMinerQueryCount.set(0);
@@ -128,6 +131,8 @@ public class LogMinerStreamingChangeEventSourceMetrics
         oversizedTransactionCount.set(0);
         scnFreezeCount.set(0);
         partialRollbackCount.set(0);
+        numberOfBufferedEvents.set(0);
+        numberOfCommittedEvents.set(0);
 
         fetchQueryDuration.reset();
         batchProcessingDuration.reset();
@@ -140,6 +145,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
 
         abandonedTransactionIds.reset();
         rolledBackTransactionIds.reset();
+        minedLogsCount.reset();
 
         oldestScnTime.set(null);
     }
@@ -147,11 +153,6 @@ public class LogMinerStreamingChangeEventSourceMetrics
     @Override
     public long getMillisecondsToKeepTransactionsInBuffer() {
         return connectorConfig.getLogMiningTransactionRetention().toMillis();
-    }
-
-    @Override
-    public long getSleepTimeInMilliseconds() {
-        return sleepTime.get();
     }
 
     @Override
@@ -193,18 +194,38 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     @Override
-    public int getBatchSize() {
-        return batchSize.get();
-    }
-
-    @Override
     public long getMinimumMinedLogCount() {
-        return minimumLogsMined.get();
+        return minedLogsCount.getMin();
     }
 
     @Override
     public long getMaximumMinedLogCount() {
-        return maximumLogsMined.get();
+        return minedLogsCount.getMax();
+    }
+
+    @Override
+    public long getCurrentMinedLogCount() {
+        return minedLogsCount.getValue();
+    }
+
+    @Override
+    public BigInteger getMiningSessionLowerBounds() {
+        return miningSessionScnRange.get().lowerBounds().asBigInteger();
+    }
+
+    @Override
+    public BigInteger getMiningSessionUpperBounds() {
+        return miningSessionScnRange.get().upperBounds().asBigInteger();
+    }
+
+    @Override
+    public BigInteger getMiningFetchLowerBounds() {
+        return miningFetchScnRange.get().lowerBounds().asBigInteger();
+    }
+
+    @Override
+    public BigInteger getMiningFetchUpperBounds() {
+        return miningFetchScnRange.get().upperBounds.asBigInteger();
     }
 
     @Override
@@ -283,9 +304,14 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     @Override
+    public long getTotalCommitTimeInMilliseconds() {
+        return commitDuration.getTotal().toMillis();
+    }
+
+    @Override
     public long getCommitThroughput() {
-        final long timeSpent = Duration.between(startTime, clock.instant()).toMillis();
-        return getNumberOfCommittedTransactions() * MILLIS_PER_SECOND / (timeSpent != 0 ? timeSpent : 1);
+        final long timeSpent = commitDuration.getTotal().toSeconds();
+        return numberOfCommittedEvents.get() / (timeSpent != 0 ? timeSpent : 1);
     }
 
     @Override
@@ -294,7 +320,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
         if (lastBatchProcessingDuration.isZero()) {
             return 0L;
         }
-        return Math.round(((float) getLastCapturedDmlCount() / lastBatchProcessingDuration.toMillis()) * 1000);
+        return Math.round(((float) jdbcRows.get() / lastBatchProcessingDuration.toMillis()) * 1000);
     }
 
     @Override
@@ -401,29 +427,16 @@ public class LogMinerStreamingChangeEventSourceMetrics
         return rolledBackTransactionIds.getAll();
     }
 
+    @Override
+    public long getNumberOfEventsInBuffer() {
+        return numberOfBufferedEvents.get();
+    }
+
     /**
      * @return database current zone offset
      */
     public ZoneOffset getDatabaseOffset() {
         return databaseZoneOffset.get();
-    }
-
-    /**
-     * Set the currently used batch size for querying LogMiner.
-     *
-     * @param batchSize batch size used for querying LogMiner
-     */
-    public void setBatchSize(int batchSize) {
-        this.batchSize.set(batchSize);
-    }
-
-    /**
-     * Set the connector's currently used sleep/pause time between LogMiner queries.
-     *
-     * @param sleepTime sleep time between LogMiner queries
-     */
-    public void setSleepTime(long sleepTime) {
-        this.sleepTime.set(sleepTime);
     }
 
     /**
@@ -481,15 +494,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
      */
     public void setMinedLogFileNames(Set<String> minedLogFileNames) {
         this.minedLogFileNames.set(minedLogFileNames.toArray(String[]::new));
-        if (minedLogFileNames.size() < minimumLogsMined.get()) {
-            minimumLogsMined.set(minedLogFileNames.size());
-        }
-        else if (minimumLogsMined.get() == 0) {
-            minimumLogsMined.set(minedLogFileNames.size());
-        }
-        if (minedLogFileNames.size() > maximumLogsMined.get()) {
-            maximumLogsMined.set(minedLogFileNames.size());
-        }
+        this.minedLogsCount.setValueAndCalculate(minedLogFileNames.size());
     }
 
     /**
@@ -528,6 +533,15 @@ public class LogMinerStreamingChangeEventSourceMetrics
      */
     public void setActiveTransactionCount(long activeTransactionCount) {
         this.activeTransactionCount.set(activeTransactionCount);
+    }
+
+    /**
+     * Sets the number of transaction events in the buffer.
+     *
+     * @param bufferedEventCount number of buffered events
+     */
+    public void setBufferedEventCount(long bufferedEventCount) {
+        this.numberOfBufferedEvents.set(bufferedEventCount);
     }
 
     /**
@@ -593,9 +607,20 @@ public class LogMinerStreamingChangeEventSourceMetrics
      */
     public void setLastBatchProcessingDuration(Duration duration) {
         batchProcessingDuration.set(duration);
-        if (getLastBatchProcessingThroughput() > getMaxBatchProcessingThroughput()) {
-            maxBatchProcessingThroughput.set(getLastBatchProcessingThroughput());
+
+        final long lastBatchProcessingThroughput = getLastBatchProcessingThroughput();
+        if (lastBatchProcessingThroughput > getMaxBatchProcessingThroughput()) {
+            maxBatchProcessingThroughput.set(lastBatchProcessingThroughput);
         }
+    }
+
+    /**
+     * Sets last number of JDBC rows read from Oracle in the last LogMiner query result-set.
+     *
+     * @param jdbcRows the number of JDBC rows read in the last LogMiner query result-set
+     */
+    public void setLastBatchJdbcRows(int jdbcRows) {
+        this.jdbcRows.set(jdbcRows);
     }
 
     /**
@@ -605,6 +630,35 @@ public class LogMinerStreamingChangeEventSourceMetrics
      */
     public void setLastCommitDuration(Duration duration) {
         commitDuration.set(duration);
+    }
+
+    /**
+     * Sets the number of events emitted in the last transaction commit.
+     *
+     * @param eventCount number of events
+     */
+    public void setLastCommitEventCount(int eventCount) {
+        numberOfCommittedEvents.addAndGet(eventCount);
+    }
+
+    /**
+     * Sets the mining session range used for what logs are read.
+     *
+     * @param lowerBounds the lower SCN bounds, must not be {@code null}
+     * @param upperBounds the upper SCN bounds, must not be {@code null}
+     */
+    public void setLastMiningSessionRange(Scn lowerBounds, Scn upperBounds) {
+        miningSessionScnRange.set(new ScnRange(lowerBounds, upperBounds));
+    }
+
+    /**
+     * Sets the mining fetch range, used for what redo entries are read.
+     *
+     * @param lowerBounds the lower SCN bounds, must not be {@code null}
+     * @param upperBounds the upper SCN bounds, must not be {@code null}
+     */
+    public void setLastMiningFetchRange(Scn lowerBounds, Scn upperBounds) {
+        miningFetchScnRange.set(new ScnRange(lowerBounds, upperBounds));
     }
 
     /**
@@ -726,12 +780,9 @@ public class LogMinerStreamingChangeEventSourceMetrics
                 ", currentLogFileNames=" + Arrays.asList(currentLogFileNames.get()) +
                 ", redoLogStatuses=" + Arrays.asList(redoLogStatuses.get()) +
                 ", databaseZoneOffset=" + databaseZoneOffset +
-                ", batchSize=" + batchSize +
                 ", logSwitchCount=" + logSwitchCount +
                 ", logMinerQueryCount=" + logMinerQueryCount +
-                ", sleepTime=" + sleepTime +
-                ", minimumLogsMined=" + minimumLogsMined +
-                ", maximumLogsMined=" + maximumLogsMined +
+                ", minedLogsCount=" + minedLogsCount +
                 ", maxBatchProcessingThroughput=" + maxBatchProcessingThroughput +
                 ", timeDifference=" + timeDifference +
                 ", processedRowsCount=" + processedRowsCount +
@@ -751,7 +802,9 @@ public class LogMinerStreamingChangeEventSourceMetrics
                 ", processGlobalAreaMemory=" + processGlobalAreaMemory +
                 ", abandonedTransactionIds=" + abandonedTransactionIds +
                 ", rolledBackTransactionIds=" + rolledBackTransactionIds +
-                "} ";
+                ", lastMiningSessionScnRange=" + miningSessionScnRange.get() +
+                ", lastMiningFetchScnRange=" + miningFetchScnRange.get() +
+                "} " + super.toString();
     }
 
     private Instant getAdjustedChangeTime(Instant changeTime) {
@@ -826,28 +879,37 @@ public class LogMinerStreamingChangeEventSourceMetrics
     }
 
     /**
-     * Utility class for tracking the current and maximum long value.
+     * Utility class for tracking the current, minimum, and maximum long value.
      */
     @ThreadSafe
-    static class MaxLongValueMetric {
+    static class LongHistogramMetric {
 
-        private final AtomicLong value = new AtomicLong();
-        private final AtomicLong max = new AtomicLong();
+        private final AtomicLong value = new AtomicLong(0L);
+        private final AtomicLong max = new AtomicLong(-1L);
+        private final AtomicLong min = new AtomicLong(-1L);
 
         public void reset() {
             value.set(0L);
-            max.set(0L);
+            max.set(-1L);
+            min.set(-1L);
         }
 
-        public void setValueAndCalculateMax(long value) {
+        public void setValueAndCalculate(long value) {
             this.value.set(value);
-            if (max.get() < value) {
-                max.set(value);
-            }
+
+            setMin(value);
+            setMax(value);
         }
 
         public void setValue(long value) {
             this.value.set(value);
+        }
+
+        public void setMin(long min) {
+            final long minimumValue = this.min.get();
+            if (minimumValue == -1 || minimumValue > min) {
+                this.min.set(min);
+            }
         }
 
         public void setMax(long max) {
@@ -861,12 +923,38 @@ public class LogMinerStreamingChangeEventSourceMetrics
         }
 
         public long getMax() {
-            return max.get();
+            final long maximumValue = max.get();
+            return maximumValue == -1 ? 0 : maximumValue;
+        }
+
+        public long getMin() {
+            final long minimumValue = min.get();
+            return minimumValue == -1 ? 0 : minimumValue;
         }
 
         @Override
         public String toString() {
-            return String.format("{value=%d,max=%d}", value.get(), max.get());
+            return "{value=%d,min=%d,max=%d}".formatted(value.get(), min.get(), max.get());
+        }
+    }
+
+    /**
+     * A record that represents an SCN range.
+     *
+     * @param lowerBounds the lower bounds, must not be {@code null}
+     * @param upperBounds the upper bounds, must not be {@code null}
+     */
+    record ScnRange(Scn lowerBounds, Scn upperBounds) {
+        /**
+         * Get an empty SCN range.
+         */
+        static ScnRange empty() {
+            return new ScnRange(Scn.NULL, Scn.NULL);
+        }
+
+        @Override
+        public String toString() {
+            return "[%s, %s]".formatted(lowerBounds, upperBounds);
         }
     }
 
@@ -971,6 +1059,7 @@ public class LogMinerStreamingChangeEventSourceMetrics
         public void updateStreamingMetrics() {
             metrics.setLastCapturedDmlCount(dataChangeCount);
             metrics.setLastProcessedRowsCount(processedRows);
+            metrics.setLastBatchJdbcRows(jdbcRows);
         }
 
         public boolean hasProcessedAnyTransactions() {
