@@ -19,8 +19,9 @@ import io.debezium.testing.system.tools.WaitConditions;
 public class KafkaContainer extends GenericContainer<KafkaContainer> {
 
     public static final String KAFKA_COMMAND = "kafka";
-    public static final int KAFKA_PORT = 9093;
-    public static final int KAFKA_BROKER_PORT = 9092;
+    public static final int KAFKA_CONTROLLER_PORT = 9093;
+    public static final int KAFKA_INTERNAL_PORT = 9092;
+    public static final int KAFKA_EXTERNAL_PORT = 9094;
 
     private static final AtomicInteger COUNTER = new AtomicInteger();
 
@@ -28,7 +29,7 @@ public class KafkaContainer extends GenericContainer<KafkaContainer> {
 
     public KafkaContainer(String containerImageName) {
         super(containerImageName);
-        mappedPort = KAFKA_PORT + COUNTER.getAndIncrement();
+        mappedPort = KAFKA_EXTERNAL_PORT + COUNTER.getAndIncrement();
         defaultConfig();
     }
 
@@ -37,14 +38,15 @@ public class KafkaContainer extends GenericContainer<KafkaContainer> {
     }
 
     private void defaultConfig() {
-        addFixedExposedPort(mappedPort, KAFKA_PORT);
+        addFixedExposedPort(mappedPort, KAFKA_EXTERNAL_PORT);
         addExposedPort(mappedPort);
         withCommand(KAFKA_COMMAND);
-        withEnv("KAFKA_LISTENERS", "PLAINTEXT://0.0.0.0:" + KAFKA_PORT + ",BROKER://0.0.0.0:" + KAFKA_BROKER_PORT);
-        withEnv("KAFKA_ADVERTISED_LISTENERS", "PLAINTEXT://" + getPublicBootstrapAddress() + ",BROKER://" + getBootstrapAddress());
-        withEnv("KAFKA_LISTENER_SECURITY_PROTOCOL_MAP", "BROKER:PLAINTEXT,PLAINTEXT:PLAINTEXT");
-        withEnv("KAFKA_INTER_BROKER_LISTENER_NAME", "BROKER");
-        withStartupTimeout(Duration.ofMinutes(WaitConditions.scaled(1)));
+        withEnv("KAFKA_LISTENERS",
+                String.format("CONTROLLER://0.0.0.0:%d,INTERNAL://0.0.0.0:%d,EXTERNAL://0.0.0.0:%d", KAFKA_CONTROLLER_PORT, KAFKA_INTERNAL_PORT, KAFKA_EXTERNAL_PORT));
+        withEnv("KAFKA_ADVERTISED_LISTENERS", String.format("INTERNAL://%s,EXTERNAL://%s", getBootstrapAddress(), getPublicBootstrapAddress()));
+        withEnv("KAFKA_INTER_BROKER_LISTENER_NAME", "INTERNAL");
+        withEnv("KAFKA_LISTENER_SECURITY_PROTOCOL_MAP", "CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT");
+        withStartupTimeout(Duration.ofMinutes(WaitConditions.scaled(3)));
     }
 
     public KafkaContainer withZookeeper(ZookeeperContainer zookeeper) {
@@ -60,11 +62,11 @@ public class KafkaContainer extends GenericContainer<KafkaContainer> {
     }
 
     public String getPublicBootstrapAddress() {
-        return getContainerIpAddress() + ":" + mappedPort;
+        return getHost() + ":" + mappedPort;
     }
 
     public String getBootstrapAddress() {
-        return getNetworkAliases().get(0) + ":" + KAFKA_BROKER_PORT;
+        return getNetworkAliases().getFirst() + ":" + KAFKA_INTERNAL_PORT;
     }
 
     @Override
